<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:orientation="vertical"
        android:background="#eee" >
        
           <RelativeLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="@drawable/title_bar"
  			android:gravity="center_vertical"  >  
  			
            
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:paddingLeft="10sp"
        		android:layout_centerVertical="true"
        		android:text="私人医生"
        		android:textSize="20sp"		
				android:textColor="#ffffff" /> 
			<TextView 
			    android:id="@+id/login_userSwitch"
			    android:layout_width="80dp" 
			    android:text="切换账号"
			    android:gravity="center"
			    android:layout_centerVertical="true"
        		android:layout_height="wrap_content"
        		android:layout_alignParentRight="true" 
        		android:layout_marginRight="5dp"
				android:background="@drawable/title_btn_right"
				android:onClick="switchUser"
			    />      
		</RelativeLayout>

        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
     <!--        
            <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/copyright" />
       -->      
            <TextView
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/copyright"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome_title"
            android:textColor="#000000"
            android:textSize="35sp" />
            
        </LinearLayout>
<!-- 
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="By：谜@BUAA"
            android:textColor="#000"
            android:textSize="30dp" />
 -->
        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:onClick="welcome_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/welcome_login_tips"
            android:textSize="14sp"
            android:textColor="#444" />

        <Button
            android:id="@+id/main_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/welcome_regist"
            android:textColor="#000000"
            android:textSize="18sp"
            android:onClick="welcome_register"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/welcome_regist_tips"
            android:textSize="14sp"
            android:textColor="#444"  />
    </LinearLayout>